--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -95,6 +95,27 @@
     padding: 15px 40px;
     font-size: 16px;
   }
+  
+  &--tv {
+    display: inline-block;
+    margin-top: 30px;
+    padding: 15px 30px 15px 70px;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: none;
+    border: 2px solid #1b85c7;
+    background: #1b85c7 url('../img/tv-round.svg') no-repeat left;
+    // background-size: 60px;
+    
+    span {
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    
+    &:hover {
+      background: transparent url('../img/tv-round.svg') no-repeat left;
+    }
+  }
 }
 
 @media screen and ($tablet-widths) {}
