--- a/mm/templates/register.html
+++ b/mm/templates/register.html
@@ -56,7 +56,7 @@
           </ul>
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button">Open live account</a>
-            <a class="button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
+            <a class="button  button--blue" href="https://client.multiplymarket.com/en/members/login">Log In</a>
             <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
           </div>
         </nav>
