--- a/borsa/css/style.css
+++ b/borsa/css/style.css
@@ -22,6 +22,14 @@ body {
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../fonts/open-sans-v15-latin-700.woff2") format("woff2"), url("../fonts/open-sans-v15-latin-700.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 
+/* open-sans-800 - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 800;
+  src: local("Open Sans ExtraBold"), local("OpenSans-ExtraBold"), url("../fonts/open-sans-v15-latin-800.woff2") format("woff2"), url("../fonts/open-sans-v15-latin-800.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
+
 .header__flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -38,11 +46,129 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 275px;
   padding-left: 0;
   list-style: none; }
+  .main-nav li {
+    position: relative; }
+  .main-nav a {
+    padding-bottom: 15px;
+    font-size: 18px;
+    text-decoration: none;
+    font-family: 'Open Sans ExtraBold', sans-serif;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+    cursor: pointer; }
+
+.main-nav__list {
+  position: absolute;
+  top: 30px;
+  left: -20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  display: none;
+  width: 232px;
+  padding-left: 0;
+  list-style: none;
+  border: 1px solid red;
+  border-radius: 5px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  z-index: 2; }
+  .main-nav__list a {
+    display: block;
+    padding: 10px 20px;
+    color: #000;
+    font-size: 14px;
+    font-family: 'Open Sans Regular', sans-serif;
+    background: none;
+    -webkit-transition: 0.2s;
+    transition: 0.2s; }
+    .main-nav__list a:hover {
+      background: red; }
+
+.main-nav > li:hover .main-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.main-nav__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 400px; }
 
 .button {
   color: #fff;
+  font-size: 18px;
   font-family: 'Open Sans Bold', sans-serif;
   text-decoration: none;
+  text-transform: uppercase;
   border-radius: 10px; }
+  .button--header {
+    padding: 12px 30px; }
+  .button--green {
+    background: #29a643; }
+  .button--gray {
+    padding: 12px 50px;
+    background: #c1c1c1; }
+  .button--slider {
+    margin: 0 15px;
+    padding: 25px 75px; }
+  .button--unclick {
+    padding: 22px 72px;
+    border: 3px solid #29a643;
+    background: transparent; }
+
+.slider {
+  z-index: 1; }
+
+.slider__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 800px; }
+
+.slider__box h2 {
+  margin-top: 0;
+  color: #fff;
+  font-size: 70px;
+  font-family: 'Open Sans Bold', sans-serif; }
+
+.slider__box--1 {
+  background: url("../img/slide-1.jpg") no-repeat center;
+  background-size: cover; }
+
+.slider__box--2 {
+  background: url("../img/slide-2.jpg") no-repeat center;
+  background-size: cover; }
+
+.slider__box--3 {
+  background: url("../img/slide-3.jpg") no-repeat center;
+  background-size: cover; }
+
+.slider__box--4 {
+  background: url("../img/slide-4.jpg") no-repeat center;
+  background-size: cover; }
+
+.slider__box--5 {
+  background: url("../img/slide-5.jpg") no-repeat center;
+  background-size: cover; }
