--- a/borsa/sass/blocks/button.scss
+++ b/borsa/sass/blocks/button.scss
@@ -1,6 +1,34 @@
 .button {
   color: #fff;
+  font-size: 18px;
   font-family: 'Open Sans Bold', sans-serif;
   text-decoration: none;
+  text-transform: uppercase;
   border-radius: 10px;
+  
+  // header
+  &--header {
+    padding: 12px 30px;
+  }
+  
+  &--green {
+    background: $mc;
+  }
+  
+  &--gray {
+    padding: 12px 50px;
+    background: #c1c1c1;
+  }
+  
+  // slider
+  &--slider {
+    margin: 0 15px;
+    padding: 25px 75px;
+  }
+  
+  &--unclick {
+    padding: 22px 72px;
+    border: 3px solid $mc;
+    background: transparent;
+  }
 }
