--- a/borsa/sass/blocks/main-nav.scss
+++ b/borsa/sass/blocks/main-nav.scss
@@ -1,6 +1,63 @@
 .main-nav {
   display: flex;
-  
+  justify-content: space-between;
+  width: 275px;
   padding-left: 0;
   list-style: none;
+  
+  li {
+    position: relative;
+  }
+  
+  a {
+    padding-bottom: 15px;
+    font-size: 18px;
+    text-decoration: none;
+    font-family: 'Open Sans ExtraBold', sans-serif;
+    transition: 0.2s;
+    cursor: pointer;
+  }
 }
+
+.main-nav__list {
+  position: absolute;
+  top: 30px;
+  left: -20px;
+  flex-direction: column;
+  display: none;
+  width: 232px;
+  padding-left: 0;
+  list-style: none;
+  border: 1px solid red;
+  border-radius: 5px;
+  transition: 0.2s;
+  z-index: 2;
+  
+  a {
+    display: block;
+    padding: 10px 20px;
+    color: #000;
+    font-size: 14px;
+    font-family: 'Open Sans Regular', sans-serif;
+    background: none;
+    transition: 0.2s;
+    
+    &:hover {
+      background: red;
+    }
+  }
+}
+
+.main-nav > li:hover .main-nav__list {
+  display: flex;
+}
+
+.main-nav__user {
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+}
+
+// .main-nav > li:hover .main__title {
+//   background: url('../img/link-arrow-up.png') no-repeat bottom;
+// }
