--- a/borsa/css/style.css
+++ b/borsa/css/style.css
@@ -30,6 +30,9 @@ body {
   src: local("Open Sans ExtraBold"), local("OpenSans-ExtraBold"), url("../fonts/open-sans-v15-latin-800.woff2") format("woff2"), url("../fonts/open-sans-v15-latin-800.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 
+.header {
+  padding: 15px 0; }
+
 .header__flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,8 +42,7 @@ body {
   justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  padding: 15px 0; }
+  align-items: center; }
 
 .main-nav {
   display: -webkit-box;
@@ -104,7 +106,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 400px; }
+  width: 350px; }
 
 .button {
   color: #fff;
@@ -118,7 +120,6 @@ body {
   .button--green {
     background: #29a643; }
   .button--gray {
-    padding: 12px 50px;
     background: #c1c1c1; }
   .button--slider {
     margin: 0 15px;
@@ -172,3 +173,155 @@ body {
 .slider__box--5 {
   background: url("../img/slide-5.jpg") no-repeat center;
   background-size: cover; }
+
+.edge {
+  padding: 130px 0;
+  text-align: center; }
+  .edge h1 {
+    margin: 0;
+    margin-bottom: 15px;
+    font-size: 70px;
+    font-family: 'Open Sans Bold', sans-serif; }
+  .edge p {
+    margin-top: 0;
+    margin-bottom: 50px;
+    font-size: 26px;
+    font-family: 'Open Sans Regular', sans-serif; }
+
+.edge__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.edge__box {
+  width: 250px;
+  padding-top: 150px;
+  font-family: 'Open Sans Bold', sans-serif;
+  text-transform: uppercase; }
+  .edge__box--1 {
+    background: url("../img/edge-1.svg") no-repeat top;
+    background-size: 120px; }
+  .edge__box--2 {
+    background: url("../img/edge-2.svg") no-repeat top;
+    background-size: 120px; }
+  .edge__box--3 {
+    background: url("../img/edge-3.svg") no-repeat top;
+    background-size: 120px; }
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.contact__left {
+  width: 50%;
+  background: url("../img/contact-bg.jpg") no-repeat top;
+  background-size: cover; }
+
+.contact__right {
+  width: 50%;
+  padding: 65px 0;
+  background: #dcdcdc; }
+  .contact__right h3 {
+    margin-top: 0;
+    font-size: 25px;
+    font-family: 'Open Sans Bold', sans-serif;
+    text-align: center;
+    text-transform: uppercase; }
+
+.form {
+  width: 570px;
+  margin: auto; }
+  .form button {
+    width: 100%;
+    padding: 30px 0;
+    background: #29a643; }
+
+.form__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.form__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 200px;
+  margin-top: 10px;
+  font-size: 18px;
+  font-family: 'Open Sans Regular', sans-serif; }
+
+.form__input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+  .form__input input {
+    width: 370px;
+    height: 45px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 10px; }
+  .form__input textarea {
+    width: 370px;
+    height: 145px;
+    margin-bottom: 40px;
+    border: none;
+    border-radius: 10px;
+    resize: none; }
+
+.app {
+  padding-top: 70px; }
+
+.app__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.app__left {
+  width: 500px;
+  text-align: center; }
+  .app__left h3 {
+    margin-bottom: 30px;
+    font-size: 70px;
+    font-family: 'Open Sans Bold', sans-serif; }
+  .app__left p {
+    margin-bottom: 40px;
+    font-size: 25px;
+    font-family: 'Open Sans Regular', sans-serif; }
+
+.app__apple {
+  display: inline-block;
+  width: 192px;
+  height: 60px;
+  margin-right: 15px;
+  background: url("../img/app-a.jpg"); }
+
+.app__google {
+  display: inline-block;
+  width: 194px;
+  height: 60px;
+  margin-left: 15px;
+  background: url("../img/app-g.jpg"); }
