--- a/borsa/js/slick/slick-theme.css
+++ b/borsa/js/slick/slick-theme.css
@@ -140,9 +140,9 @@
 
     display: inline-block;
 
-    width: 70px;
-    height: 3px;
-    margin: 0 5px;
+    width: 15px;
+    height: 15px;
+    margin: 0 15px;
     padding: 0;
 
     cursor: pointer;
@@ -154,24 +154,26 @@
 
     display: block;
 
-    width: 70px;
-    height: 3px;
-    padding: 3px;
+    width: 15px;
+    height: 15px;
+    /* padding: 3px; */
 
     cursor: pointer;
 
     /* color: transparent; */
     border: 0;
-    border-radius: 3px;
+    border-radius: 50%;
     outline: none;
-    background: #1b85c7;
+    background: #29a643;
     
     transition: 0.3s;
 }
 .slick-dots li button:hover,
 .slick-dots li button:focus
 {
-    background: #009f3c;
+    padding: 0;
+    border: 3px solid #29a643;
+    background: red;
     outline: none;
 }
 .slick-dots li button:hover:before,
@@ -203,5 +205,7 @@
 } */
 .slick-dots li.slick-active button
 {
-    background: #009f3c;
+    padding: 0;
+    border: 3px solid #29a643;
+    background: red;
 }
