--- a/borsa/sass/blocks/header.scss
+++ b/borsa/sass/blocks/header.scss
@@ -1,8 +1,9 @@
-.header {}
+.header {
+  padding: 15px 0;
+}
 
 .header__flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0;
 }
