--- a/borsa/sass/style.scss
+++ b/borsa/sass/style.scss
@@ -7,3 +7,7 @@
 @import 'blocks/main-nav';
 @import 'blocks/button';
 @import 'blocks/slider';
+@import 'blocks/edge';
+@import 'blocks/contact';
+@import 'blocks/form';
+@import 'blocks/app';
