--- a/borsa/css/style.css
+++ b/borsa/css/style.css
@@ -327,7 +327,7 @@ body {
   background: url("../img/app-g.jpg"); }
 
 .comment {
-  padding: 70px 0;
+  padding-top: 70px;
   background: #dcdcdc; }
   .comment h3 {
     margin-top: 0;
@@ -338,15 +338,203 @@ body {
 
 .comment__box {
   height: 350px !important;
+  padding-top: 100px;
   text-align: center;
   -webkit-transition: 0.3s;
   transition: 0.3s; }
   .comment__box p {
+    position: absolute;
+    top: 0;
+    width: 700px;
+    margin-left: -240px;
     font-size: 18px;
     opacity: 0; }
   .comment__box img {
     width: 100px;
     margin: auto;
+    margin-top: 50px;
+    margin-bottom: 15px;
     border-radius: 50%;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
+  .comment__box b {
+    font-size: 18px;
+    font-family: 'Open Sans Bold', sans-serif;
+    text-transform: uppercase;
+    opacity: 0; }
+  .comment__box small {
+    font-size: 18px;
+    font-family: 'Open Sans Regular', sans-serif;
+    opacity: 0; }
+
+.payment {
+  padding: 20px 0;
+  background: #818181; }
+
+.payment__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.payment__box {
+  width: 157px;
+  height: 45px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  cursor: pointer; }
+
+.payment__box--wm {
+  width: 155px;
+  height: 41px;
+  background: url("../img/wm.svg") no-repeat center;
+  background-size: 155px, 41px; }
+  .payment__box--wm:hover {
+    background: url("../img/wm-h.svg") no-repeat center;
+    background-size: 155px, 41px; }
+
+.payment__box--sofort {
+  width: 111px;
+  height: 36px;
+  background: url("../img/sofort.svg") no-repeat center;
+  background-size: 111px, 36px; }
+  .payment__box--sofort:hover {
+    background: url("../img/sofort-h.svg") no-repeat center;
+    background-size: 111px, 36px; }
+
+.payment__box--ae {
+  width: 121px;
+  height: 42px;
+  background: url("../img/ae.svg") no-repeat center;
+  background-size: 121px, 42px; }
+  .payment__box--ae:hover {
+    background: url("../img/ae-h.svg") no-repeat center;
+    background-size: 121px, 42px; }
+
+.payment__box--neteller {
+  width: 157px;
+  height: 27px;
+  background: url("../img/neteller.svg") no-repeat center;
+  background-size: 157px, 27px; }
+  .payment__box--neteller:hover {
+    background: url("../img/neteller-h.svg") no-repeat center;
+    background-size: 157px, 27px; }
+
+.payment__box--ideal {
+  width: 52px;
+  height: 45px;
+  background: url("../img/ideal.svg") no-repeat center;
+  background-size: 52px, 45px; }
+  .payment__box--ideal:hover {
+    background: url("../img/ideal-h.svg") no-repeat center;
+    background-size: 52px, 45px; }
+
+.payment__box--skrill {
+  width: 107px;
+  height: 37px;
+  background: url("../img/skrill.svg") no-repeat center;
+  background-size: 107px, 37px; }
+  .payment__box--skrill:hover {
+    background: url("../img/skrill-h.svg") no-repeat center;
+    background-size: 107px, 37px; }
+
+.payment__box--visa {
+  width: 110px;
+  height: 36px;
+  background: url("../img/visa.svg") no-repeat center;
+  background-size: 110px, 36px; }
+  .payment__box--visa:hover {
+    background: url("../img/visa-h.svg") no-repeat center;
+    background-size: 110px, 36px; }
+
+.payment__box--master {
+  width: 75px;
+  height: 40px;
+  background: url("../img/master.svg") no-repeat center;
+  background-size: 75px, 40px; }
+  .payment__box--master:hover {
+    background: url("../img/master-h.svg") no-repeat center;
+    background-size: 75px, 40px; }
+
+.payment__box--bank {
+  width: 117px;
+  height: 43px;
+  background: url("../img/bank.svg") no-repeat center;
+  background-size: 117px, 43px; }
+  .payment__box--bank:hover {
+    background: url("../img/bank-h.svg") no-repeat center;
+    background-size: 117px, 43px; }
+
+@media screen and (max-width: 768px) {
+  .payment {
+    padding-bottom: 0; }
+  .payment__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .payment__box {
+    margin-bottom: 20px; } }
+
+.footer {
+  padding-top: 50px;
+  background: #212121; }
+  .footer b {
+    display: block;
+    margin-bottom: 10px;
+    color: #fff;
+    font-family: 'Open Sans Bold', sans-serif; }
+  .footer ul {
+    padding-left: 0;
+    font-family: 'Open Sans Regular', sans-serif;
+    list-style: none;
+    list-style-position: inside; }
+    .footer ul a {
+      color: #818181;
+      text-decoration: none;
+      -webkit-transition: 0.2s;
+      transition: 0.2s; }
+      .footer ul a:hover {
+        color: #29a643; }
+  .footer h1 {
+    color: #fff;
+    font-size: 25px;
+    font-family: 'SF UI Display Heavy', sans-serif;
+    text-align: center;
+    text-transform: uppercase; }
+  .footer p {
+    color: #818181;
+    font-family: 'SF UI Display Regular', sans-serif;
+    text-align: center; }
+  .footer hr {
+    opacity: 0.2; }
+
+.footer__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.footer__copyright {
+  margin: 0;
+  margin-top: 50px;
+  padding: 30px 0;
+  color: #fff !important;
+  background: #627062; }
+
+.footer__active {
+  color: #29a643; }
+
+@media screen and (max-width: 768px) {
+  .footer__flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; } }
