--- a/borsa/css/style.css
+++ b/borsa/css/style.css
@@ -6,6 +6,10 @@ body {
   width: 1200px;
   margin: auto; }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 95%; } }
+
 /* open-sans-regular - latin */
 @font-face {
   font-family: 'Open Sans';
@@ -43,6 +47,17 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+
+.main-nav__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 65%; }
 
 .main-nav {
   display: -webkit-box;
@@ -106,7 +121,134 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 350px; }
+  width: 350px;
+  padding-left: 0;
+  list-style: none; }
+
+.main-nav__toggle {
+  display: none; }
+
+.main-nav__container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+@media screen and (max-width: 1200px) {
+  .main-nav {
+    width: 200px; }
+    .main-nav a {
+      font-size: 14px; }
+  .main-nav__user {
+    width: 300px; } }
+
+@media screen and (max-width: 768px) {
+  .main-nav__wrapper {
+    width: auto; }
+  .main-nav__list {
+    left: -55px;
+    width: 150px; }
+  .main-nav {
+    position: relative;
+    width: 0; }
+  .main-nav__user {
+    width: 0; }
+  .main-nav__toggle {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 20px;
+    width: 55px;
+    height: 50px;
+    font-size: 0;
+    border: none;
+    background-color: #29a643;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  .main-nav__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .main-nav--closed .main-nav__toggle::before {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 13px;
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
+    box-shadow: 0 8px 00 #fff, 0 16px 00 #fff;
+    -webkit-transition: background-color 0.3s;
+    transition: background-color 0.3s; }
+  .main-nav--closed .main-nav__toggle:active::before {
+    background-color: rgba(255, 255, 255, 0.3);
+    -webkit-box-shadow: 0 8px 0 rgba(255, 255, 255, 0.3), 0 16px 0 rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 0 rgba(255, 255, 255, 0.3), 0 16px 0 rgba(255, 255, 255, 0.3); }
+  .main-nav--opened .main-nav__toggle {
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    z-index: 20; }
+    .main-nav--opened .main-nav__toggle::before, .main-nav--opened .main-nav__toggle::after {
+      content: "";
+      position: absolute;
+      top: 20px;
+      left: 8px;
+      width: 25px;
+      height: 2px;
+      background-color: #fff;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      -webkit-transition: background-color 0.5s;
+      transition: background-color 0.5s; }
+    .main-nav--opened .main-nav__toggle::before {
+      -webkit-transform: rotate(45deg);
+      transform: rotate(45deg); }
+    .main-nav--opened .main-nav__toggle::after {
+      -webkit-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
+    .main-nav--opened .main-nav__toggle:active::before, .main-nav--opened .main-nav__toggle:active::after {
+      background-color: rgba(255, 255, 255, 0.3); }
+  .main-nav--closed .main-nav__item {
+    display: none; }
+    .main-nav--closed .main-nav__item--active {
+      display: block;
+      text-align: center; }
+  .main-nav--opened .main-nav {
+    width: 300px; }
+  .main-nav--opened .main-nav__user {
+    width: 300px; }
+  .main-nav--opened .main-nav__container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    height: 400px;
+    background-color: white;
+    -webkit-animation: menu-opened 0.5s;
+    animation: menu-opened 0.5s; }
+  .main-nav--nojs .main-nav__toggle {
+    display: none; }
+  .main-nav--nojs .main-nav__container {
+    position: static;
+    height: auto; }
+  .main-nav--nojs .main-nav__item {
+    display: block; }
+    .main-nav--nojs .main-nav__item--active {
+      text-align: left; } }
 
 .button {
   color: #fff;
@@ -128,6 +270,16 @@ body {
     padding: 22px 72px;
     border: 3px solid #29a643;
     background: transparent; }
+
+@media screen and (max-width: 1200px) {
+  .button {
+    font-size: 14px; } }
+
+@media screen and (max-width: 768px) {
+  .button--slider {
+    margin: 5px 0;
+    padding: 25px 72px;
+    text-align: center; } }
 
 .slider {
   z-index: 1; }
@@ -174,6 +326,25 @@ body {
   background: url("../img/slide-5.jpg") no-repeat center;
   background-size: cover; }
 
+@media screen and (max-width: 1200px) {
+  .slider__container {
+    height: 600px; }
+  .slider__box h2 {
+    font-size: 60px; } }
+
+@media screen and (max-width: 768px) {
+  .slider__box h2 {
+    font-size: 30px;
+    text-align: center; }
+  .slider__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
+
 .edge {
   padding: 130px 0;
   text-align: center; }
@@ -211,6 +382,28 @@ body {
     background: url("../img/edge-3.svg") no-repeat top;
     background-size: 120px; }
 
+@media screen and (max-width: 1200px) {
+  .edge h1 {
+    font-size: 60px; } }
+
+@media screen and (max-width: 768px) {
+  .edge {
+    padding: 50px 0; }
+    .edge h1 {
+      font-size: 30px; }
+    .edge p {
+      font-size: 16px; }
+  .edge__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .edge__box {
+    margin-bottom: 20px; } }
+
 .contact {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -231,6 +424,18 @@ body {
     font-family: 'Open Sans Bold', sans-serif;
     text-align: center;
     text-transform: uppercase; }
+
+@media screen and (max-width: 1200px) {
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .contact__left {
+    width: 100%;
+    height: 600px; }
+  .contact__right {
+    width: 100%; } }
 
 .form {
   width: 570px;
@@ -289,6 +494,20 @@ body {
     border-radius: 10px;
     resize: none; }
 
+@media screen and (max-width: 768px) {
+  .form {
+    width: auto;
+    padding: 0 20px; }
+  .form__label {
+    display: none; }
+  .form__input {
+    margin: auto; }
+    .form__input input {
+      width: auto;
+      padding: 0 20px; }
+    .form__input textarea {
+      width: 98%; } }
+
 .app {
   padding-top: 70px; }
 
@@ -325,6 +544,33 @@ body {
   height: 60px;
   margin-left: 15px;
   background: url("../img/app-g.jpg"); }
+
+@media screen and (max-width: 1200px) {
+  .app__left h3 {
+    font-size: 60px; } }
+
+@media screen and (max-width: 768px) {
+  .app {
+    padding-top: 50px; }
+    .app img {
+      max-width: 100%;
+      -ms-flex-item-align: center;
+      align-self: center;
+      margin-top: 50px; }
+  .app__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .app__left {
+    width: auto; }
+    .app__left h3 {
+      margin-top: 0;
+      font-size: 30px; }
+    .app__left p {
+      font-size: 16px; }
+    .app__left a {
+      margin: 0; } }
 
 .comment {
   padding-top: 70px;
@@ -366,6 +612,10 @@ body {
     font-size: 18px;
     font-family: 'Open Sans Regular', sans-serif;
     opacity: 0; }
+
+@media screen and (max-width: 768px) {
+  .comment {
+    display: none; } }
 
 .payment {
   padding: 20px 0;
