--- a/borsa/sass/blocks/edge.scss
+++ b/borsa/sass/blocks/edge.scss
@@ -43,3 +43,35 @@
     background-size: 120px;
   }
 }
+
+@media screen and ($tablet-widths) {
+  .edge {
+    
+    h1 {
+      font-size: 60px;
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .edge {
+    padding: 50px 0;
+    
+    h1 {
+      font-size: 30px;
+    }
+    
+    p {
+      font-size: 16px;
+    }
+  }
+  
+  .edge__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .edge__box {
+    margin-bottom: 20px;
+  }
+}
