--- a/borsa/sass/blocks/header.scss
+++ b/borsa/sass/blocks/header.scss
@@ -7,3 +7,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {}
