--- a/borsa/sass/blocks/main-nav.scss
+++ b/borsa/sass/blocks/main-nav.scss
@@ -1,3 +1,10 @@
+.main-nav__wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 65%;
+}
+
 .main-nav {
   display: flex;
   justify-content: space-between;
@@ -56,8 +63,216 @@
   display: flex;
   justify-content: space-between;
   width: 350px;
+  padding-left: 0;
+  list-style: none;
+}
+
+.main-nav__toggle {
+  display: none;
+}
+
+.main-nav__container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 // .main-nav > li:hover .main__title {
 //   background: url('../img/link-arrow-up.png') no-repeat bottom;
 // }
+
+@media screen and ($tablet-widths) {
+  .main-nav {
+    width: 200px;
+    
+    a {
+      font-size: 14px;
+    }
+  }
+  
+  .main-nav__user {
+    width: 300px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  // .page-header__main-nav {
+  //   height: 50px;
+  // }
+  
+  // .page-header__flex {
+  //   flex-direction: column;
+  // }
+  
+  // .page-header__menu {
+  //   flex-direction: column;
+  //   align-items: center;
+  // }
+  
+  // .page-header__item {
+  //   margin-bottom: 10px;
+  // }
+  
+  .main-nav__wrapper {
+    width: auto;
+  }
+  
+  .main-nav__list {
+    left: -55px;
+    width: 150px;
+  }
+  
+  .main-nav {
+    position: relative;
+    width: 0;
+  }
+  
+  .main-nav__user {
+    width: 0;
+  }
+  
+  .main-nav__toggle {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 20px;
+    width: 55px;
+    height: 50px;
+    font-size: 0;
+    border: none;
+    background-color: $mc;
+    cursor: pointer;
+    transition: 0.3s;
+    
+      // &:hover {
+      // 
+      // }
+    }
+  
+  .main-nav__container {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .main-nav--closed {
+    .main-nav__toggle {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 15px;
+        left: 13px;
+        width: 30px;
+        height: 2px;
+        background-color: #fff;
+        box-shadow:
+          0 8px 00 #fff,
+          0 16px 00 #fff;
+        transition: background-color 0.3s;
+      }
+      
+      &:active::before {
+        background-color: rgba(255, 255, 255, 0.3);
+        box-shadow:
+          0 8px 00 rgba(255, 255, 255, 0.3),
+          0 16px 00 rgba(255, 255, 255, 0.3);
+      }
+    }
+  }
+  
+  .main-nav--opened {
+    .main-nav__toggle {
+      top: 20px;
+      right: 20px;
+      width: 40px;
+      height: 40px;
+      z-index: 20;
+      
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          top: 20px;
+          left: 8px;
+          width: 25px;
+          height: 2px;
+          background-color: #fff;
+          box-shadow: none;
+          transition: background-color 0.5s;
+        }
+        
+        &::before {
+          transform: rotate(45deg);
+        }
+        
+        &::after {
+          transform: rotate(-45deg);
+        }
+        
+        &:active::before,
+        &:active::after {
+          background-color: rgba(255, 255, 255, 0.3);
+        }
+      }
+    }
+  
+  .main-nav--closed {
+    .main-nav__item {
+      display: none;
+      
+        &--active {
+          display: block;
+          text-align: center;
+        }
+      }
+      
+    // .page-header__user-menu {
+    //   display: none;
+    // }
+  }
+  
+  .main-nav--opened {
+    .main-nav {
+      width: 300px;
+    }
+    
+    .main-nav__user {
+      width: 300px;
+    }
+    
+    .main-nav__container {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 10;
+      height: 400px;
+      background-color: white;
+      animation: menu-opened 0.5s;
+    }
+  }
+  
+  .main-nav--nojs {
+    .main-nav__toggle {
+      display: none;
+    }
+    
+    .main-nav__container {
+      position: static;
+      height: auto;
+    }
+    
+    .main-nav__item {
+      display: block;
+      
+        &--active {
+          text-align: left;
+        }
+    }
+    
+    // .page-header__user-menu {
+    //   display: block;
+    //   background-color: #6a4d38;
+    // }
+  }
+}
