--- a/borsa/sass/blocks/form.scss
+++ b/borsa/sass/blocks/form.scss
@@ -37,7 +37,7 @@
     border-radius: 10px;
     
     &::placeholder {
-      
+      font-size: 0;
     }
   }
   
@@ -70,6 +70,10 @@
     input {
       width: auto;
       padding: 0 20px;
+      
+      &::placeholder {
+        font-size: 12px;
+      }
     }
     
     textarea {
