--- a/mb/sass/style.scss
+++ b/mb/sass/style.scss
@@ -7,3 +7,8 @@
 @import 'blocks/nav';
 @import 'blocks/button';
 @import 'blocks/title';
+@import 'blocks/counter';
+@import 'blocks/price';
+@import 'blocks/steps';
+@import 'blocks/profit';
+@import 'blocks/ssl';
