--- a/mb/sass/blocks/button.scss
+++ b/mb/sass/blocks/button.scss
@@ -24,4 +24,12 @@
     text-transform: uppercase;
     border: 1px solid $mc;
   }
+  
+  &--click {
+    padding: 10px 50px;
+    color: #fff;
+    font-size: 15px;
+    text-transform: uppercase;
+    background: $mc;
+  }
 }
