--- a/mb/sass/blocks/type.scss
+++ b/mb/sass/blocks/type.scss
@@ -8,6 +8,14 @@
     font-size: 35px;
     font-family: 'ProximaNovaBold', sans-serif;
   }
+  
+  hr {
+    width: 500px;
+    height: 1px;
+    margin: 65px auto 35px;
+    border: none;
+    background: $mc;
+  }
 }
 
 .type__flex {
