--- a/mb/sass/blocks/ssl.scss
+++ b/mb/sass/blocks/ssl.scss
@@ -16,6 +16,13 @@
 }
 
 .ssl__text {
+  margin: 0 0 70px 0;
   font-size: 20px;
   font-family: 'ProximaNovaLight', sans-serif;
+}
+
+.ssl__flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
