--- a/mb/sass/blocks/type.scss
+++ b/mb/sass/blocks/type.scss
@@ -25,16 +25,25 @@
 }
 
 .type__box {
-  padding: 50px;
+  width: 320px;
+  padding: 0 0 45px 0;
   box-shadow: 0px 4px 58.8px 1.2px rgba(0, 0, 0, 0.2);
+  
+  header {
+    padding: 60px 0 30px 0;
+  }
+  
+  hr {
+    width: 200px;
+    margin: 0 auto;
+    background: #d1d1d1;
+  }
   
   h2 {
     margin: 0;
-    padding: 0 0 30px 0;
     color: $mc;
     font-size: 36px;
     font-family: 'ProximaNovaBold', sans-serif;
-    border-bottom: 1px solid #d1d1d1;
   }
   
   p {
@@ -53,30 +62,22 @@
 }
 
 .type__box--center {
-  padding: 0 0 50px 0;
+  width: 335px;
   
   header {
-    padding: 55px 0 30px 0;
     background: $mc;
   }
   
   h2 {
-    padding: 0;
     color: #fff;
     font-size: 41px;
-    border: none;
   }
   
   p {
     margin: 60px 0 40px 0;
-    padding: 0 60px;
   }
   
   b {
     color: $mc;
-  }
-  
-  a {
-    margin: 0 0 30px 0;
   }
 }
