--- a/forex24/css/style.css
+++ b/forex24/css/style.css
@@ -207,6 +207,17 @@ body {
     font-family: 'Roboto Bold', sans-serif;
     text-align: center;
     text-transform: uppercase; }
+  .webtrader hr {
+    height: 1px;
+    margin: 50px 0;
+    border: none;
+    background: #b8b8b8; }
+  .webtrader h3 {
+    margin: 0 0 20px 0;
+    font-size: 40px;
+    font-weight: inherit;
+    font-family: 'Roboto Bold', sans-serif;
+    text-align: center; }
 
 .webtrader__img {
   background: url("../img/web-mockup-1.png") no-repeat top;
@@ -218,7 +229,10 @@ body {
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .webtrader__box {
   width: 210px;
@@ -246,7 +260,69 @@ body {
     content: '';
     position: absolute;
     top: 32px;
-    right: -105px;
+    right: -112px;
     width: 10px;
     height: 10px;
     background: url("../img/web-point.svg"); }
+
+.webtrader__subtext {
+  margin: 0 0 60px 0;
+  font-size: 18px;
+  font-family: 'Roboto Light', sans-serif; }
+
+.webtrader__mockup {
+  width: 470px;
+  height: 530px;
+  background: url("../img/web-mockup-2.png") no-repeat top;
+  background-size: contain; }
+
+.webtrader__text b {
+  font-size: 18px;
+  font-family: 'Roboto Bold', sans-serif;
+  text-transform: uppercase; }
+
+.webtrader__text ul {
+  padding: 0;
+  font-size: 18px;
+  font-family: 'Roboto Light', sans-serif;
+  list-style: inside;
+  list-style-image: url("../img/web-list.svg"); }
+  .webtrader__text ul li {
+    margin: 0 0 10px 0; }
+
+.webtrader__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.webtrader__button {
+  margin: 0 15px;
+  padding: 15px;
+  color: #fff;
+  font-size: 15px;
+  font-family: 'Roboto Bold', sans-serif;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 2px;
+  line-height: 12px; }
+  .webtrader__button span {
+    font-size: 10px;
+    font-family: 'Roboto', sans-serif; }
+  .webtrader__button--green {
+    position: relative;
+    background: #00b755; }
+    .webtrader__button--green::before {
+      content: 'Trading involves risk of loss';
+      position: absolute;
+      left: 0;
+      bottom: -15px;
+      width: 100%;
+      color: #000;
+      font-size: 8px;
+      text-transform: none; }
+  .webtrader__button--blue {
+    background: #00c7e2; }
