--- a/forex24/sass/blocks/webtrader.scss
+++ b/forex24/sass/blocks/webtrader.scss
@@ -9,6 +9,21 @@
     text-align: center;
     text-transform: uppercase;
   }
+  
+  hr {
+    height: 1px;
+    margin: 50px 0;
+    border: none;
+    background: #b8b8b8;
+  }
+  
+  h3 {
+    margin: 0 0 20px 0;
+    font-size: 40px;
+    font-weight: inherit;
+    font-family: 'Roboto Bold', sans-serif;
+    text-align: center;
+  }
 }
 
 .webtrader__img {
@@ -19,6 +34,7 @@
 .webtrader__flex {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .webtrader__box {
@@ -55,9 +71,86 @@
     content: '';
     position: absolute;
     top: 32px;
-    right: -105px;
+    right: -112px;
     width: 10px;
     height: 10px;
     background: url('../img/web-point.svg');
+  }
+}
+
+.webtrader__subtext {
+  margin: 0 0 60px 0;
+  font-size: 18px;
+  font-family: 'Roboto Light', sans-serif;
+}
+
+.webtrader__mockup {
+  width: 470px;
+  height: 530px;
+  background: url('../img/web-mockup-2.png') no-repeat top;
+  background-size: contain;
+}
+
+.webtrader__text {
+  
+  b {
+    font-size: 18px;
+    font-family: 'Roboto Bold', sans-serif;
+    text-transform: uppercase;
+  }
+  
+  ul {
+    padding: 0;
+    font-size: 18px;
+    font-family: 'Roboto Light', sans-serif;
+    list-style: inside;
+    list-style-image: url('../img/web-list.svg');
+    
+    li {
+      margin: 0 0 10px 0;
+    }
+  }
+}
+
+.webtrader__links {
+  display: flex;
+  justify-content: center;
+}
+
+.webtrader__button {
+  margin: 0 15px;
+  padding: 15px;
+  color: #fff;
+  font-size: 15px;
+  font-family: 'Roboto Bold', sans-serif;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 2px;
+  line-height: 12px;
+  
+  span {
+    font-size: 10px;
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  &--green {
+    position: relative;
+    background: #00b755;
+    
+    &::before {
+      content: 'Trading involves risk of loss';
+      position: absolute;
+      left: 0;
+      bottom: -15px;
+      width: 100%;
+      color: #000;
+      font-size: 8px;
+      text-transform: none;
+    }
+  }
+  
+  &--blue {
+    background: #00c7e2;
   }
 }
