--- a/borsa/sass/style.scss
+++ b/borsa/sass/style.scss
@@ -12,5 +12,7 @@
 @import 'blocks/form';
 @import 'blocks/app';
 @import 'blocks/comment';
+@import 'blocks/news';
+@import 'blocks/quote';
 @import 'blocks/payment';
 @import 'blocks/footer';
