--- a/borsa/sass/blocks/button.scss
+++ b/borsa/sass/blocks/button.scss
@@ -5,6 +5,7 @@
   text-decoration: none;
   text-transform: uppercase;
   border-radius: 10px;
+  transition: 0.3s;
   
   // header
   &--header {
@@ -13,22 +14,55 @@
   
   &--green {
     background: $mc;
+    
+    &:hover {
+      font-size: 19px;
+      box-shadow: 0px 2px 4px 0px rgba(104, 74, 202, 0.29);
+    }
   }
   
   &--gray {
     background: #c1c1c1;
+    
+    &:hover {
+      font-size: 19px;
+      box-shadow: 0px 2px 4px 0px rgba(104, 74, 202, 0.29);
+    }
   }
   
   // slider
   &--slider {
     margin: 0 15px;
     padding: 25px 75px;
+    
+    &:hover {
+      font-size: 18px;
+    }
   }
   
   &--unclick {
     padding: 22px 72px;
     border: 3px solid $mc;
     background: transparent;
+    
+    &:hover {
+      background: $mc;
+    }
+  }
+  
+  // news
+  &--news {
+    display: block;
+    // width: 100%;
+    padding: 10px 0;
+    color: #000;
+    text-align: center;
+    border: 3px solid $mc;
+    
+    &:hover {
+      color: #fff;
+      background: $mc;
+    }
   }
 }
 
