--- a/borsa/sass/global/fonts.scss
+++ b/borsa/sass/global/fonts.scss
@@ -1,6 +1,6 @@
 /* open-sans-regular - latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans Regular';
   font-style: normal;
   font-weight: 400;
   src: local('Open Sans Regular'), local('OpenSans-Regular'),
@@ -9,7 +9,7 @@
 }
 /* open-sans-700 - latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans Bold';
   font-style: normal;
   font-weight: 700;
   src: local('Open Sans Bold'), local('OpenSans-Bold'),
@@ -18,7 +18,7 @@
 }
 /* open-sans-800 - latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans ExtraBold';
   font-style: normal;
   font-weight: 800;
   src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'),
