--- a/borsa/sass/blocks/header.scss
+++ b/borsa/sass/blocks/header.scss
@@ -1,5 +1,12 @@
 .header {
-  padding: 15px 0;
+  padding: 10px 0;
+  
+  &--inner {
+    position: sticky;
+    top: 0;
+    background: #fff;
+    opacity: 0.9;
+  }
 }
 
 .header__flex {
