--- a/borsa/sass/blocks/trade.scss
+++ b/borsa/sass/blocks/trade.scss
@@ -11,4 +11,11 @@
     font-family: 'Open Sans Bold', sans-serif;
     text-transform: uppercase;
   }
+  
+  ul {
+    padding: 0;
+    font-family: 'Open Sans Regular', sans-serif;
+    line-height: 30px;
+    list-style: inside url('../img/table-g.svg');
+  }
 }
